Some close-button updates and all that

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -152,7 +152,7 @@
 
                     <MudSpacer />
 
-                    <MudButton FullWidth="true" Color="Color.Secondary" Variant="Variant.Outlined" OnClick="InsertDefault">Load default data</MudButton>
+                    <MudButton FullWidth="true" Color="Color.Secondary" Variant="Variant.Text" OnClick="InsertDefault">Load default data</MudButton>
                 </MudStack>
             </MudPaper>
         </MudItem>
