--- a/SimTECH/SimTECH/Pages/Statistics/Stats.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/Stats.razor
@@ -133,7 +133,7 @@
     private async Task ShowStatistic(StatTopic topic)
     {
         var parameters = await topic.ParameterQuery.Invoke();
-        _ = await _dialog.ShowAsync(topic.StatisticType, topic.Title, parameters);
+        _ = await _dialog.ShowAsync(topic.StatisticType, topic.Title, parameters, Constants.StatisticDialogDefaultOptions);
     }
 
     internal class StatTopic
