Implemented some stuff (and things)

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -147,19 +147,17 @@
         <MudItem xs="12" md="3">
             <MudPaper Elevation="5" Class="pa-4 mud-height-full">
                 <MudStack Class="mud-height-full">
-                    <MudText Typo="Typo.h5">Data</MudText>
+                    <MudText Typo="Typo.h5">Hello</MudText>
                     <MudDivider />
 
-                    <MudSpacer />
-
-                    <MudButton FullWidth="true" Color="Color.Secondary" Variant="Variant.Text" OnClick="InsertDefault">Load default data</MudButton>
+                    <MudText Typo="Typo.body2">First time here? Wow, how cool. Go to <MudLink Href="extra">extra</MudLink> to load some default data!</MudText>
                 </MudStack>
             </MudPaper>
         </MudItem>
     </MudGrid>
 </MudContainer>
 
-    @code {
+@code {
     private SimConfig config;
     private List<League> activeLeagues;
     private List<Data.Models.Season> activeSeasons = new();
