--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -26,7 +26,7 @@
         <MudNavLink Href="/stats" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.BarChart">Stats</MudNavLink>
         <MudNavLink Href="/test" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Lightbulb">Test</MudNavLink>
         <MudNavLink Href="/legacy" Match="NavLinkMatch.Prefix" Icon="@IconCollection.Planet">Legacy</MudNavLink>
-        <MudNavLink Href="/credits" Match="NavLinkMatch.Prefix" Icon="@IconCollection.BrandVolkswagen">Credits</MudNavLink>
+        <MudNavLink Href="/extra" Match="NavLinkMatch.Prefix" Icon="@IconCollection.BrandVolkswagen">Extra</MudNavLink>
     </MudNavGroup>
 </MudNavMenu>
 
