--- a/SimTECH/SimTECH/Components/DriverGraphic.razor
+++ b/SimTECH/SimTECH/Components/DriverGraphic.razor
@@ -27,7 +27,7 @@
     [Parameter] public string Abbreviation { get; set; } = "XXX";
     [Parameter] public int Number { get; set; }
     [Parameter] public string Team { get; set; } = "Team";
-    [Parameter] public string Colour { get; set; } = Constants.DefaultColour;
+    [Parameter] public string Colour { get; set; } = Generals.DefaultColour;
     [Parameter] public int Position { get; set; }
     [Parameter] public bool Eliminated { get; set; }
 
