--- a/SimTECH/SimTECH/Components/DriverPosition.razor
+++ b/SimTECH/SimTECH/Components/DriverPosition.razor
@@ -6,9 +6,9 @@
     [Parameter, EditorRequired]
     public int Number { get; set; }
     [Parameter]
-    public string Colour { get; set; } = Constants.DefaultColour;
+    public string Colour { get; set; } = Generals.DefaultColour;
     [Parameter]
-    public string Accent { get; set; } = Constants.DefaultAccent;
+    public string Accent { get; set; } = Generals.DefaultAccent;
 
     private string _styles
     {
