--- a/SimTECH/SimTECH/Components/PreviewColourMix.razor
+++ b/SimTECH/SimTECH/Components/PreviewColourMix.razor
@@ -14,8 +14,8 @@
     {
         get
         {
-            var background = Colour ?? Constants.DefaultBackground;
-            var accent = Accent ?? Constants.DefaultAccent;
+            var background = Colour ?? Generals.DefaultBackground;
+            var accent = Accent ?? Generals.DefaultAccent;
 
             return $"background-color: {background}; color: {accent}";
         }
