--- a/SimTECH/SimTECH/Pages/Racing/PositionChangeChart.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PositionChangeChart.razor
@@ -63,7 +63,7 @@
 
     protected override void OnInitialized()
     {
-        options = Constants.ChartOptionsDefault;
+        options = DefaultOptions.ChartOptionsDefault;
 
         driverCount = Drivers.Count;
 
