--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -865,7 +865,7 @@
     }
 
     private async Task ShowGapperChart() => _ =
-        await _dialog.ShowAsync<GapChartDialog>("Gapper chart", new DialogParameters { ["Drivers"] = raceDrivers }, Constants.StatisticDialogDefaultOptionsXl);
+        await _dialog.ShowAsync<GapChartDialog>("Gapper chart", new DialogParameters { ["Drivers"] = raceDrivers }, DefaultOptions.StatisticDialogDefaultOptionsXl);
     private async Task ShowPositionChart() => _ =
-        await _dialog.ShowAsync<PositionChangeChart>("Position chart", new DialogParameters { ["Drivers"] = raceDrivers }, Constants.StatisticDialogDefaultOptionsXl);
+        await _dialog.ShowAsync<PositionChangeChart>("Position chart", new DialogParameters { ["Drivers"] = raceDrivers }, DefaultOptions.StatisticDialogDefaultOptionsXl);
 }
