--- a/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
+++ b/SimTECH/SimTECH/Pages/Season/Development/Developer.razor
@@ -426,6 +426,6 @@
                 ["SeasonEngines"] = SeasonEngines
             };
 
-        await _dialogService.ShowAsync<SummaryDevelopment>("Summary development", parameters, Constants.StatisticDialogDefaultOptionsXl);
+        await _dialogService.ShowAsync<SummaryDevelopment>("Summary development", parameters, DefaultOptions.StatisticDialogDefaultOptionsXl);
     }
 }
