--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeams.razor
@@ -80,8 +80,8 @@
                 Reliability = team.Reliability,
                 Engine = engine?.Name ?? "[Unknown]",
                 Manufacturer = manufacturer?.Name ?? "[Unknown]",
-                ManColour = manufacturer?.Colour ?? Constants.DefaultColour,
-                ManAccent = manufacturer?.Accent ?? Constants.DefaultAccent,
+                ManColour = manufacturer?.Colour ?? Generals.DefaultColour,
+                ManAccent = manufacturer?.Accent ?? Generals.DefaultAccent,
 
                 SeasonTeam = team
             };
