--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -40,12 +40,12 @@
 </MudLayout>
 
 @code {
-    MudTheme Theme { get; set; } = Constants.GalacticTheme;
+    MudTheme Theme { get; set; } = CustomThemes.GalacticTheme;
 
     bool drawerOpen = true;
     bool isDarkTheme = true;
 
-    Dictionary<string, MudTheme> simThemes = Constants.SimThemes;
+    Dictionary<string, MudTheme> simThemes = CustomThemes.SimThemes;
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {   
