--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -9,6 +9,7 @@
 @using MudExtensions
 @using SimTECH
 @using SimTECH.Components
+@using SimTECH.Constants
 @using SimTECH.Data.EditModels
 @using SimTECH.Data.Models
 @using SimTECH.Data.Services
