--- a/SimTECH/SimTECH/Pages/Contracts/ManagerDuration.razor
+++ b/SimTECH/SimTECH/Pages/Contracts/ManagerDuration.razor
@@ -28,7 +28,7 @@
                     <MudStack Row="true" AlignItems="AlignItems.Center">
                         <MudText>@(context.Driver?.FullName ?? "[Unknown driver]")</MudText>
                         <MudSpacer />
-                        <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="ElementSize.Small" />
+                        <CountryFlag Code="@(context.Driver?.Country ?? Generals.DefaultCountry)" Size="ElementSize.Small" />
                     </MudStack>
                 </MudTd>
                 <MudTd>
@@ -40,7 +40,7 @@
                     <MudStack Row="true" AlignItems="AlignItems.Center">
                         <MudText>@(context.Driver?.FullName ?? "[Unknown driver]")</MudText>
                         <MudSpacer />
-                        <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="ElementSize.Small" />
+                        <CountryFlag Code="@(context.Driver?.Country ?? Generals.DefaultCountry)" Size="ElementSize.Small" />
                     </MudStack>
                 </MudTd>
                 <MudTd>
