--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignDriverTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignDriverTeams.razor
@@ -30,7 +30,7 @@
                                         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
                                             <MudText Class="overflow-hider">@seasonTeam.Name</MudText>
                                             <MudSpacer />
-                                            <CountryFlag Code="@(seasonTeam.Team?.Country ?? Constants.DefaultCountry)" />
+                                            <CountryFlag Code="@(seasonTeam.Team?.Country ?? Generals.DefaultCountry)" />
                                         </MudStack>
                                     </MudDropZone>
                                 </MudPaper>
@@ -44,7 +44,7 @@
                     <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0 mx-1">
                         <MudText Class="overflow-hider">@(context.Driver?.FullName)</MudText>
                         <MudSpacer />
-                        <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="ElementSize.Small" />
+                        <CountryFlag Code="@(context.Driver?.Country ?? Generals.DefaultCountry)" Size="ElementSize.Small" />
                     </MudStack>
                 </MudPaper>
             </ItemRenderer>
