--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -399,7 +399,7 @@
                 ["Results"] = OverviewModel.ClassResults()
             };
 
-        _ = await _dialogService.ShowAsync<QualyBattles>("QualifyingBattles", parameters, Constants.StatisticDialogDefaultOptions);
+        _ = await _dialogService.ShowAsync<QualyBattles>("QualifyingBattles", parameters, DefaultOptions.StatisticDialogDefaultOptions);
     }
 
     private async Task ShowUsedComponents()
@@ -414,7 +414,7 @@
                 ["Incidents"] = incidents,
             };
 
-        _ = await _dialogService.ShowAsync<UsedComponents>("UsedComponents", parameters, Constants.StatisticDialogDefaultOptions);
+        _ = await _dialogService.ShowAsync<UsedComponents>("UsedComponents", parameters, DefaultOptions.StatisticDialogDefaultOptions);
     }
 
     private void GoToCommon(string path) => _nav.NavigateTo(path);
