--- a/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
@@ -74,7 +74,7 @@
     private Dictionary<Driver, DataSet> comparableDrivers = new();
 
     ApexCharts.ApexChart<DataPoint>? chart;
-    ApexCharts.ApexChartOptions<DataPoint> options = Constants.ChartOptionsDefault;
+    ApexCharts.ApexChartOptions<DataPoint> options = DefaultOptions.ChartOptionsDefault;
 
     bool loading = true;
     bool rendered = false;
