--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -9,18 +9,18 @@
         <MudNavLink Href="/traits" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.FlashOn">Traits</MudNavLink>
     </MudNavGroup>
 
-    <MudNavGroup Title="Race factors" Icon="@IconCollection.SteeringWheel" @bind-Expanded="factorsExpanded">
+    <MudNavGroup Title="Race factors" Icon="@IconCollection.Truck" @bind-Expanded="factorsExpanded">
         <MudNavLink Href="/manufacturers" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Garage">Suppliers</MudNavLink>
         <MudNavLink Href="/tyres" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.LocalGasStation">Tyres</MudNavLink>
         <MudNavLink Href="/incidents" Match="NavLinkMatch.Prefix" Icon="@IconCollection.TrafficCone">Incidents</MudNavLink>
         <MudNavLink Href="/climates" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Cloud">Climates</MudNavLink>
     </MudNavGroup>
 
-    <MudNavLink Href="/leagues" Match="NavLinkMatch.Prefix" Icon="@IconCollection.Trophy">Leagues</MudNavLink>
-
-    <MudNavLink Href="/seasons" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Seasons</MudNavLink>
-
-    <MudNavLink Href="/contracts" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AssignmentInd">Contracts</MudNavLink>
+    <MudNavGroup Title="Motorsport" Icon="@IconCollection.SteeringWheel" @bind-Expanded="motorsportExpanded">
+        <MudNavLink Href="/leagues" Match="NavLinkMatch.Prefix" Icon="@IconCollection.Trophy">Leagues</MudNavLink>
+        <MudNavLink Href="/seasons" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Flag">Seasons</MudNavLink>
+        <MudNavLink Href="/contracts" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.AssignmentInd">Contracts</MudNavLink>
+    </MudNavGroup>
 
     <MudNavGroup Title="Extra" Icon="@Icons.Material.Filled.Explicit" @bind-Expanded="extraExpanded">
         <MudNavLink Href="/stats" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.BarChart">Stats</MudNavLink>
@@ -33,5 +33,6 @@
 @code {
     bool entrantsExpanded = true;
     bool factorsExpanded = true;
+    bool motorsportExpanded = true;
     bool extraExpanded = false;
 }
