--- a/SimTECH/SimTECH/Components/SmolAccent.razor
+++ b/SimTECH/SimTECH/Components/SmolAccent.razor
@@ -7,7 +7,7 @@
     {
         get
         {
-            var colour = Colour ?? Generals.DefaultColour;
+            var colour = Colour ?? Globals.DefaultColour;
             return $"background-color: {colour};";
         }
     }
