--- a/SimTECH/SimTECH/Pages/Contracts/ManagerDropper.razor
+++ b/SimTECH/SimTECH/Pages/Contracts/ManagerDropper.razor
@@ -49,7 +49,7 @@
                 <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0 mx-1">
                     <MudText Class="overflow-hider">@(context.Duration) - @(context.Driver?.FullName ?? "[Unknown]")</MudText>
                     <MudSpacer />
-                    <CountryFlag Code="@(context.Driver?.Country ?? Generals.DefaultCountry)" Size="ElementSize.Small" />
+                    <CountryFlag Code="@(context.Driver?.Country ?? Globals.DefaultCountry)" Size="ElementSize.Small" />
                 </MudStack>
             </MudPaper>
         </ItemRenderer>
