--- a/SimTECH/SimTECH/Pages/Factors/ClimateEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/ClimateEditor.razor
@@ -52,7 +52,7 @@
     [Parameter] public Climate? Climate { get; set; }
 
     EditClimate model;
-    string[] weatherIcons = Generals.AllWeatherIcons;
+    string[] weatherIcons = Globals.AllWeatherIcons;
 
     protected override void OnInitialized()
     {
