--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -39,7 +39,7 @@
 
     bool loading = true;
     string raceName = string.Empty;
-    Country raceCountry = Generals.DefaultCountry;
+    Country raceCountry = Globals.DefaultCountry;
     int amountRuns;
     int practiceRng;
     int advancedRuns;
