--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -44,7 +44,7 @@
         var classResults = OverviewModel.ClassResults();
 
         foreach (var round in OverviewModel.Races.OrderBy(e => e.Round))
-            countryRounds.Add(round.Round, round.Track?.Country ?? Generals.DefaultCountry);
+            countryRounds.Add(round.Round, round.Track?.Country ?? Globals.DefaultCountry);
 
         int indexer = 0;
 
