--- a/SimTECH/SimTECH/Components/CountryFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryFlag.razor
@@ -3,7 +3,7 @@
 </MudElement>
 
 @code {
-    [Parameter] public Country Code { get; set; } = Generals.DefaultCountry;
+    [Parameter] public Country Code { get; set; } = Globals.DefaultCountry;
     [Parameter] public ElementSize Size { get; set; } = ElementSize.Normal;
     [Parameter] public string Class { get; set; } = string.Empty;
 
