--- a/SimTECH/SimTECH/Components/NumberDisplay.razor
+++ b/SimTECH/SimTECH/Components/NumberDisplay.razor
@@ -4,8 +4,8 @@
 
 @code {
     [Parameter] public RenderFragment? ChildContent { get; set; }
-    [Parameter] public string Colour { get; set; } = Generals.DefaultColour;
-    [Parameter] public string Accent { get; set; } = Generals.DefaultAccent;
+    [Parameter] public string Colour { get; set; } = Globals.DefaultColour;
+    [Parameter] public string Accent { get; set; } = Globals.DefaultAccent;
     [Parameter] public Typo Typo { get; set; } = Typo.caption;
 
     private string _styles
