--- a/SimTECH/SimTECH/Components/SupplierDisplay.razor
+++ b/SimTECH/SimTECH/Components/SupplierDisplay.razor
@@ -2,6 +2,6 @@
 
 @code {
     [Parameter] public RenderFragment? ChildContent { get; set; }
-    [Parameter] public string Colour { get; set; } = Generals.DefaultColour;
-    [Parameter] public string Accent { get; set; } = Generals.DefaultAccent;
+    [Parameter] public string Colour { get; set; } = Globals.DefaultColour;
+    [Parameter] public string Accent { get; set; } = Globals.DefaultAccent;
 }
