--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -199,7 +199,7 @@
                     RaceId = nextRace.Id,
                     Name = nextRace.Name,
                     Round = nextRace.Round,
-                    Country = nextRace.Track?.Country ?? Generals.DefaultCountry,
+                    Country = nextRace.Track?.Country ?? Globals.DefaultCountry,
                     SeasonDisplay = season.Year.ToString(),
                     LeagueName = activeLeagues.Find(e => e.Id == season.LeagueId)?.Name ?? "[Unknown]",
                 };
