--- a/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
+++ b/SimTECH/SimTECH/Pages/Racing/GapChartDialog.razor
@@ -43,7 +43,7 @@
 
     protected override void OnInitialized()
     {
-        options = DefaultOptions.ChartOptionsDefault;
+        options = Globals.ChartOptionsDefault;
 
         options.Yaxis = new();
         options.Yaxis.Add(new ApexCharts.YAxis { Reversed = true });
