--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -42,7 +42,7 @@
 
     bool loading = true;
     string raceName = string.Empty;
-    Country raceCountry = Generals.DefaultCountry;
+    Country raceCountry = Globals.DefaultCountry;
     int amountRuns;
     int advancedRuns;
     int qualyRng;
