--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/FinalCheck.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/FinalCheck.razor
@@ -15,7 +15,7 @@
                         <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                             <MudText>@context.Driver?.FullName</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="@(context.Driver?.Country ?? Generals.DefaultCountry)" Size="ElementSize.Small" />
+                            <CountryFlag Code="@(context.Driver?.Country ?? Globals.DefaultCountry)" Size="ElementSize.Small" />
                         </MudStack>
                     </MudTd>
                     <MudTd DataLabel="Number">
@@ -46,7 +46,7 @@
                                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                                     <MudText>@context.Name</MudText>
                                     <MudSpacer />
-                                    <CountryFlag Code="@(context.Team?.Country ?? Generals.DefaultCountry)" Size="ElementSize.Small" />
+                                    <CountryFlag Code="@(context.Team?.Country ?? Globals.DefaultCountry)" Size="ElementSize.Small" />
                                 </MudStack>
                             </MudTd>
                             <MudTd DataLabel="Principal">
