--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
@@ -75,8 +75,8 @@
                 Attack = driver.Attack,
                 Defense = driver.Defense,
                 Team = team?.Team?.Name ?? "DROPPED",
-                Colour = team?.Colour ?? Generals.DefaultColour,
-                Accent = team?.Accent ?? Generals.DefaultAccent,
+                Colour = team?.Colour ?? Globals.DefaultColour,
+                Accent = team?.Accent ?? Globals.DefaultAccent,
 
                 SeasonDriver = driver
             };
