--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/WdcResultChart.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/WdcResultChart.razor
@@ -43,7 +43,7 @@
 
     protected override void OnInitialized()
     {
-        options = DefaultOptions.ChartOptionsDefault;
+        options = Globals.ChartOptionsDefault;
 
         var allotments = Season.PointAllotments?.ToDictionary(e => e.Position, e => e.Points) ?? new Dictionary<int, int>();
 
