--- a/SimTECH/SimTECH/Pages/Season/Stats/UsedComponents.razor
+++ b/SimTECH/SimTECH/Pages/Season/Stats/UsedComponents.razor
@@ -97,8 +97,8 @@
                     Number = driver.Number,
                     Country = driver.Driver.Country,
                     Team = driverTeam?.Team?.Name ?? "[Dropped]",
-                    Colour = driverTeam?.Colour ?? Generals.DefaultColour,
-                    Accent = driverTeam?.Accent ?? Generals.DefaultAccent,
+                    Colour = driverTeam?.Colour ?? Globals.DefaultColour,
+                    Accent = driverTeam?.Accent ?? Globals.DefaultAccent,
                 };
 
             foreach (var penalizable in penalizableIncidents)
